# python-lox

./: '  .gitignore  GRAMMAR.md  README.md  \  pyproject.toml
.github/workflows/: ci.yml
benchmarks/fibonacci/iterative/: RESULTS.txt  program.cpp  program.lox  program.py
benchmarks/fibonacci/recursive/: RESULTS.txt  program.cpp  program.jlox  program.lox  program.py
extras/: ast_printer.py  rpn_converter.py
samples/: counter_with_functions.lox  inheritance.lox  linked_list.lox  program.lox  recursive_fibonacci.lox  reverse_number.lox  simple_calculator_with_functions.lox
src/python_lox/: __main__.py  ast_printer.py  callable.py  environment.py  error_reporter.py  exceptions.py  flags.py  interpreter.py  lexer.py  lox.py  lox_class.py  native_functions.py  parser.py  resolver.py  token.py  tokendefs.py
src/python_lox/ast/: expr.py  stmt.py  var.py
src/python_lox/extras/: __init__.py  ast_printer.py  rpn_printer.py
tests/: conftest.py  test_functions.py  test_interpreter.py  test_lexer.py  test_loops.py  test_lox_programs.py  test_parser.py  test_statements.py
tests/programs/: arrow_functions.lox  augmented_assignment.lox  class_test_basic.lox  class_test_init.lox  class_test_methods.lox  class_test_object_within.lox  class_test_properties.lox  class_test_this.lox  closures.lox  fibo.lox  functions.lox  functions_2.lox  getters.lox  hello.lox  ifs.lox  inheritance.lox  logical.lox  scope.lox  static_functions_variables.lox  super.lox  variables.lox
tools/: ast_visualizer.py  generate_ast.py  generate_tokendefs.py
