[project]
name = "python-lox"
version = "0.1.0"
description = "Python implementation of Lox programming language"
authors = [
    {name = "ananthvk", email = "-"},
]
dependencies = ["typer>=0.15.2"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
pylox = "python_lox.__main__:run"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "mypy>=1.15.0",
    "black>=25.1.0",
    "ruff>=0.11.7",
    "codespell>=2.4.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
[tool.pdm]
distribution = true

[tool.pdm.scripts]
gen-ast = "python tools/generate_ast.py"
typecheck = "mypy -p python_lox --strict"
typecheck-tools = "mypy tools/ast_visualizer.py tools/generate_ast.py tools/generate_tokendefs.py"
format = { composite = [
    "ruff check . --fix",
    "ruff format .",
    "ruff check . --select I --fix",
    "black .",
] }
test = "pytest"
codespell = "codespell"
check = { composite = [
    "pdm run format",
    "pdm run typecheck",
    "pdm run test",
    "pdm run codespell",
] }


[tool.isort]
profile = "black"

[tool.black]
line-length = 88